# serializer version: 1
# name: test_script_ok[script_multi][sql]
  'SELECT col1 FROM table1; SELECT col2 FROM table2'
# ---
# name: test_script_ok[script_multi][tree]
  '''
  script
    query_expr
      select
        select_list
          select_expr
            ident	col1
        from_clause
          from_item_table
            path_expression
              ident	table1
    query_expr
      select
        select_list
          select_expr
            ident	col2
        from_clause
          from_item_table
            path_expression
              ident	table2
  
  '''
# ---
# name: test_script_ok[script_multi_with_trailing_semi][sql]
  'SELECT col1 FROM table1; SELECT col2 FROM table2;'
# ---
# name: test_script_ok[script_multi_with_trailing_semi][tree]
  '''
  script
    query_expr
      select
        select_list
          select_expr
            ident	col1
        from_clause
          from_item_table
            path_expression
              ident	table1
    query_expr
      select
        select_list
          select_expr
            ident	col2
        from_clause
          from_item_table
            path_expression
              ident	table2
  
  '''
# ---
# name: test_script_ok[script_single][sql]
  'SELECT col1 FROM table1;'
# ---
# name: test_script_ok[script_single][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_script_ok[script_top_level_from][sql]
  'FROM table1;'
# ---
# name: test_script_ok[script_top_level_from][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
